# bgpy

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  background_graceful.py  background_plain.py  background_threading.py  check.sh  install.sh  log.py  main.py  pyproject.toml  run.sh  watch.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  package-check.yml  package-publish.yml
bg_py/: background.py  background_event.py  background_graceful.py  background_plain.py  communication.py  environment.py  example.py  log.py  main.py  process.py  serialize.py
bgpy/: __init__.py  bgpy.py  cli.py  client.py  environment.py  interface.py  log.py  message.py  serialize.py  server.py  sockets.py  tasks.py  test.py
bgpy/core/: __init__.py  environment.py  log.py  message.py  serialize.py  sockets.py  token.py
bgpy/example/: __init__.py  tasks.py
docs/: environment.yml
docs/source/: bgpy.core.rst  bgpy.example.rst  bgpy.rst  conf.py  index.rst  installation.rst  modules.rst
tests/: test_cli.py  test_client_server.py  test_file_init.py  test_interface.py
