[tool.poetry]
name = "bgpy"
version = "0.3.1"
description = "Running local or remote Python servers in the background and establish stream socket-based communication with clients."
maintainers = ["Merlin Unterfinger <info@munterfinger.ch>"]
authors = ["Merlin Unterfinger <info@munterfinger.ch>"]
license = "MIT"
readme = "README.rst"
homepage = "https://pypi.org/project/bgpy/"
documentation = "https://bgpy.readthedocs.io/en/latest/"
repository = "https://github.com/munterfi/bgpy"

[tool.poetry.scripts]
bgpy = "bgpy.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
typer = ">=0.3.2,<0.5.0"
importlib-metadata = { version = ">=3.4,<5.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1.12"
flake8 = "^3.9.2"
mypy = "^0.910"
pydata-sphinx-theme = "^0.7.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
Sphinx = "^4.2.0"
tomlkit = "^0.7.2"

[mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
